--- a/myApp/package.json
+++ b/myApp/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.19",
     "@ionic/storage": "2.1.3",
-    "bower": "^1.8.2",
+    "bower": "^1.8.4",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -35,6 +35,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "myscript": "^4.1.1",
+    "pepjs": "^0.4.3",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
