--- a/myApp/package.json
+++ b/myApp/package.json
@@ -26,10 +26,11 @@
     "@ionic/pro": "1.0.19",
     "@ionic/storage": "2.1.3",
     "bower": "^1.8.4",
+    "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
